--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_URL="http://localhost:5000"
-VITE_IF="http://localhost:5000/images/"
+VITE_URL="https://the-blog-backend-1xid.onrender.com"
+VITE_IF="https://the-blog-backend-1xid.onrender.com/images/"
